[package]
name = "riverriderust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = "0.11.1"
crossterm = "0.27.0"
dotenv = "0.15.0"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["full"] }
